feat(registration): add validation
